--- a/package.json
+++ b/package.json
@@ -3,5 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Andreazo Silva <andreazocoisas@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "4",
+    "eslint": "7",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
+    "typescript": "^4.0.3"
+  }
 }
