--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Andreazo Silva <andreazocoisas@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -13,6 +14,11 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
     "eslint-plugin-standard": "4",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
