--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -20,5 +21,8 @@
   },
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "validator": "^13.1.17"
   }
 }
