--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Andreazo Silva <andreazocoisas@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@types/validator": "^13.1.0",
@@ -23,6 +24,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.17"
   }
 }
