--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "author": "Andreazo Silva <andreazocoisas@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.14",
+    "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.2",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "2",
-    "eslint-plugin-node": "11",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "4",
     "eslint-plugin-standard": "4",
     "jest": "^26.4.2",
@@ -21,10 +23,14 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests  --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
 }
