--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.2",
@@ -19,17 +20,20 @@
     "eslint-plugin-promise": "4",
     "eslint-plugin-standard": "4",
     "jest": "^26.4.2",
+    "sucrase": "^3.15.0",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "jest --passWithNoTests  --noStackTrace --runInBand",
+    "start:dev":"sucrase-node src/main/server.ts",
+    "test": "jest --watchAll",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
