--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.14",
     "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.2",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -21,11 +22,12 @@
     "eslint-plugin-standard": "4",
     "jest": "^26.4.2",
     "sucrase": "^3.15.0",
+    "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start:dev":"sucrase-node src/main/server.ts",
+    "start:dev": "sucrase-node src/main/server.ts",
     "test": "jest --watchAll",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
